--- a/manifests/deploy-microservice.yml
+++ b/manifests/deploy-microservice.yml
@@ -2,25 +2,25 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
     labels:
-        app: mild-temper-microservice
+        app: developed-radiation-microservice
         stack: frontend
         source: demo
-    name: mild-temper-microservice
+    name: developed-radiation-microservice
     namespace: microservices
 spec:
     replicas: 3
     selector:
         matchLabels:
-            run: mild-temper-microservice
+            run: developed-radiation-microservice
     template:
         metadata:
             labels:
-                app: mild-temper-microservice
-                run: mild-temper-microservice
+                app: developed-radiation-microservice
+                run: developed-radiation-microservice
                 source: demo
         spec:
             containers:
-                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
+                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/developed-radiation-microservice
                     name: developed-radiation-microservice
                     ports:
                         -   name: web
@@ -31,8 +31,8 @@ kind: Service
 apiVersion: v1
 metadata:
     labels:
-        app: mild-temper-microservice-service
-    name: mild-temper-microservice-service
+        app: developed-radiation-microservice-service
+    name: developed-radiation-microservice-service
     namespace: microservices
 spec:
     selector:
@@ -51,15 +51,15 @@ kind: Ingress
 metadata:
     annotations:
         nginx.ingress.kubernetes.io/rewrite-target: /$2
-    name: mild-temper-ingress
+    name: developed-radiation-ingress
     namespace: microservices
 spec:
     rules:
         -   http:
                 paths:
-                    -   path: /mild-temper(/|$)(.*)
+                    -   path: /developed-radiation(/|$)(.*)
                         backend:
-                            serviceName: mild-temper-microservice-service
+                            serviceName: developed-radiation-microservice-service
                             servicePort: 30201
 
 
